compiler-core/main/build/packages/snapshots/gleam_core__build__packages__requirement__tests__read_wrong_version.snap
---
source: compiler-core/src_refactored/build/packages/requirement.rs
assertion_line: 181
expression: error.to_string()
snapshot_kind: text
---
TOML parse error at line 2, column 21
  |
2 |             short = ">= 2.0 and < 3.0.0"
  |                     ^^^^^^^^^^^^^^^^^^^^
>= 2.0 and < 3.0.0 is not a valid version. missing patch version: 2.0
